Fixed buttons shifting panel height for real this time
Last time I was just joking, obviously

--- a/spacebox.css
+++ b/spacebox.css
@@ -227,7 +227,7 @@ body {
 .panel-btn-center:active, .panel-btn-center:disabled {
     filter: brightness(0.95);
     border-bottom: 0.1rem solid rgba(0, 0, 0, .2);
-    margin-top: 1.1rem;
+    margin-top: 0.1rem;
 }
 
 .panel-btn-left { border-radius: 4px 0px 0px 4px; }
